Fixing bug on scrollbar

--- a/src/app/@ansyn/ansyn/modules/menu-items/results/components/results-table/results-table.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/results/components/results-table/results-table.component.less
@@ -59,7 +59,7 @@
 					align-items: center;
 					position: relative;
 					width: 100%;
-					height: 6vh;
+					height: 7vh;
 					text-align: left;
 					cursor: pointer;
 					box-sizing: border-box;
